fix: overflow on card

--- a/src/index.css
+++ b/src/index.css
@@ -49,13 +49,12 @@ main {
       border-radius: 1.5rem;
       box-shadow: #363636 2px 4px 8px;
       background-color: white;
+      overflow: hidden;
 
       .card-top {
         
-        p {
-          background-color: var(--card-top-colour);
-          font-size: xx-large;
-          text-align: center;
+        img {
+          width: 100%;
         }
       }
 
